src/Modules/Laser.Orchard.Cookies/Styles/cookiecuttr.css
/* To be used with cookieCuttr by Chris Wharton (http://cookiecuttr.com) */
/* Modified by Laser */
.cc-cookies {
    position: fixed;
    width: 100%;
    left: 0;
    /*top: 0;*/
    padding: 0.5em 5%;
    background: #565656;
    background: rgba(86,86,86,0.95);
    color: #fff;
    font-size: 13px;
    font-weight: 700;
    text-shadow: 0 -1px 0 rgba(0,0,0,0.35);
    z-index: 99999;
    text-align: center;
    color: #fff;
    opacity: 0.9;
}

    .cc-cookies a, .cc-cookies a:hover {
        text-decoration: underline;
    }

.cc-overlay {
    height: 100%;
    width: 100%;
    padding-top: 15vh;
}

.cc-banner {
    background-color: black;
    box-shadow: #121212 2px 2px 14px 2px
}

.cc-cookies a.cc-cookie-accept {
    display: inline-block;
    color: #fff;
    text-decoration: none;
    background: #00bee9;
    padding: 0.5em 0.75em;
    border-radius: 0px;
    box-shadow: 0 0 2px rgba(0,0,0,0.25);
    text-shadow: 0 -1px 0 rgba(0,0,0,0.35);
    -o-transition: background 0.5s ease-in;
    -webkit-transition: background 0.25s ease-in;
    -moz-transition: background 0.25s ease-in;
}

.cc-cookie-accept-selected {
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.cc-cookie-checks .cc-cookie-accept-selected a {
    display: inline-block;
    color: #fff;
    text-decoration: none;
    background: #00bee9;
    padding: 0.5em 0.75em;
    border-radius: 0px;
    box-shadow: 0 0 2px rgba(0,0,0,0.25);
    text-shadow: 0 -1px 0 rgba(0,0,0,0.35);
    -o-transition: background 0.5s ease-in;
    -webkit-transition: background 0.25s ease-in;
    -moz-transition: background 0.25s ease-in;
}

.cc-cookies.cc-discreet {
    width: auto;
    padding: 0.5em 1em;
    left: auto;
    top: auto;
}

.cc-cookies-reset a.cc-cookie-reset {
    color: #fff;
}

.cc-cookies-reset a:hover.cc-cookie-reset {
    text-decoration: none;
}

.cc-cookies-reset {
    background-color: #000;
    width: 100%;
    position: sticky;
    left: 0;
    padding: 5px;
}

    .cc-cookies-reset.cc-discreet {
        width: auto;
        display: inline-block;
        margin-left: 10px;
    }

.cc-cookie-frame {
    width: 90%;
    max-width: 670px;
    background-color: #ccc;
    border-radius: 5px;
    top: 0px;
    margin: 0 auto;
    padding: 10px;
}

    .cc-cookie-frame .cc-cookie-box {
        padding: 10px;
    }

.cc-cookie-box {
    background-color: black;
    border-radius: 5px;
    text-align: justify;
    font-weight: normal;
    width: 90%;
    max-width: 670px;
    margin: 0px auto;
    width: auto;
    padding: 0px;
}

    .cc-cookie-box h3 {
        text-align: center;
        font-size: 22px;
        font-weight: 700;
    }

    .cc-cookie-box p {
        text-align: justify;
        margin-bottom: 10px;
    }

        .cc-cookie-box p#ccPolicyMsgLink a:link {
            color: #fff;
            text-decoration: none
        }

        .cc-cookie-box p#ccPolicyMsgLink a:visited {
            color: #fff;
            text-decoration: underline
        }

        .cc-cookie-box p#ccPolicyMsgLink a:hover {
            color: #fff;
            text-decoration: underline
        }

        .cc-cookie-box p#ccPolicyMsgLink a:active {
            color: #fff;
            text-decoration: none
        }

        .cc-cookie-box p#ccPolicyMsgLink {
            text-align: left;
        }

.cc-cookie-checks-box {
    display: inline-block;
    margin: auto;
    clear: both;
    width: 100%
}

.cc-cookie-checks {
    float: left;
    width: 100%;
    margin-top: 15px;
    padding: 10px;
    border-style: solid;
    border-width: 1px;
    border-color: rgb(222, 222, 222);
    border-radius: 5px;
    display: block;
}

.cc-cookie-box form {
    display: none;
}

a.cc-cookie-accept {
    width: 100%;
    text-align: center;
    font-weight: bold;
    font-size: 14px;
}

a.cc-expand {
    display: inline-block;
    color: #fff;
    text-decoration: none;
    background: #00bee9;
    padding: 0.5em 0.75em;
    border-radius: 0px;
    box-shadow: 0 0 2px rgba(0,0,0,0.25);
    text-shadow: 0 -1px 0 rgba(0,0,0,0.35);
    -o-transition: background 0.5s ease-in;
    -webkit-transition: background 0.25s ease-in;
    -moz-transition: background 0.25s ease-in;
    cursor: pointer;
}


.cc-powered-by-box {
    position: relative;
}

p#ccPoweredBy, p#ccPoweredBy a:link, p#ccPoweredBy a:visited, p#ccPoweredBy a:hover, p#ccPoweredBy a:active {
    text-align: right;
    color: #fff;
    text-decoration: none;
    font-weight: normal;
}

.cc-cookie-checks label {
    margin-right: 0.5em;
}

    .cc-cookie-checks label input[type=checkbox] {
        display: inline-block;
        width: 19px;
        height: 19px;
        margin: -2px 2px 0 10px;
        vertical-align: middle;
        cursor: pointer;
        margin-right: 0.5em;
        -webkit-appearance: checkbox;
    }

@media screen and (max-width: 768px) {
    .cc-cookies a.cc-cookie-accept, .cc-cookies-reset a.cc-cookie-reset {
        display: block;
        margin: 0;
    }
}

@media screen and (max-width: 480px) {
    .cc-cookies, .cc-cookies-reset {
        /* position: relative; */
        float: left;
    }
}

.cc-powered-by-left {
    position: absolute;
    bottom: 0px;
    margin-bottom: 6px
}

.cc-powered-by-right {
    position: absolute;
    right: 0;
    bottom: 0
}

#ccPoweredBy {
    height: 34px
}

.cc-overlay #ccPoweredBy {
    float: none !important;
}

.cc-cookie-box #ccPoweredBy {
    float: left;
}

    .cc-cookie-box #ccPoweredBy > div {
        bottom: auto !important;
    }

    .cc-cookie-box #ccPoweredBy + div {
        position: relative !important;
        bottom: auto !important;
        right: auto !important;
        float: right;
    }

@media (max-width: 767px) {
    .cc-cookie-box #ccPoweredBy, .cc-cookie-box #ccPoweredBy + div {
        float: none;
        margin-bottom: 10px;
    }
}

